--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
@@ -20,8 +20,21 @@
         var YES_CONCEPT_ID = 1065;
         var NO_CONCEPT_ID = 1066;
         var TRANSIT =5622;
-
         var ctxPath = typeof openmrsContextPath === 'string' ? openmrsContextPath : OPENMRS_CONTEXT_PATH;
+
+        var ageGroup = function () {
+            pAge = parseInt('<lookup expression="patient.age"/>');
+            var adultLabelText = "Adult";
+            var childLabelText = "Child";
+            if (pAge &gt; 15) {
+                whoChild.style.display='none';
+                jq("#patient-age-group").text(adultLabelText);
+            }
+            if (pAge &lt; 15) {
+                whoAdult.style.display='none';
+                jq("#patient-age-group").text(childLabelText);
+            }
+        }
 
         function onTransferStatusChange() {
             if (getValue('transfer-in-status.value') == NO_CONCEPT_ID) {
@@ -48,7 +61,6 @@
                 jq('#baseline-assessment2').show();
                 jq('#baseline-assessment3').show();
                 jq('#treatment-supporter').show();
-                jq('#generate-hiv-id').hide();
                 jq('#transit-patient').hide();
             } else if (getValue('transfer-in-status.value') == TRANSIT) {
                 jq('#transit-patient').show();
@@ -122,8 +134,7 @@
             //Get age and gender for validation
             var pgender = "<lookup expression="patient.gender" />";
             var pAge = parseInt('<lookup expression="patient.age"/>');
-           // console.log("Gender" +pgender);
-
+            ageGroup();
             jq('#transfer-in-status input').click(onTransferStatusChange);
             jq('#art-status input').click(onArtStatusChange);
             jq('#generate-hiv-id').click(onUpnGenerateClick);
@@ -162,9 +173,9 @@
                         alert("This number already exist");
                         return false;
 				 }    */
-				/*  pw greencard additions  validation  */
+
                 if(/^[0-9]{10}$/.test(upn) === false) {
-                    alert("Invalid Unique Patien Number(UPN) Format! Should be mfl-clinic number, each 5 digits");
+                    alert("Invalid Unique Patient Number(UPN) Format! Should be mfl-clinic number, each 5 digits");
                     return false;
                 }
 
@@ -213,8 +224,6 @@
 			<table>
 				<tr>
 					<td>Entry point*</td>
-
-					<!-- pw greencard additions increased entry points -->
 					<td colspan="3">
 						<obs style="radio" answerSeparator=" "
 							 conceptId="160540AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
@@ -222,11 +231,10 @@
 							 answerLabels="HBTC,VCT Site,MCH,IPD-Adult,IPD-Child,TB Clinic,OPD,CCC,Self Test,Other(eg STI)"
 
 						/>
-					<td><obsgroup groupingConceptId="161559AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
+					<td><obsgroup groupingConceptId="161358AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
 						<obs conceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
 					</obsgroup></td>
 					</td>
-					<!-- .pw greencard additions increased entry points -->
 				</tr>
 				<tr></tr>
 				<tr>
@@ -239,16 +247,26 @@
 						/>
 					</td>
 				</tr>
+				<tr>
+					<ifMode mode="EDIT">
+						<script type="text/javascript">
+                            jq(function(){
+                                var PATIENT_IS_ENROLLED_HIV = <lookup expression="kenyaemr.hasHivUniquePatientNumber()" />;
+                                if(PATIENT_IS_ENROLLED_HIV) {
+                                    jq('#hiv-id :input').prop('disabled', true);
+                                    jq('#generate-hiv-id').hide();
+                                }
+                            });
 
-				<excludeIf velocityTest="$kenyaemr.hasHivUniquePatientNumber()">
-					<tr>
-						<td>Unique Patient Number (UPN)</td>
-						<td>
-							<span id="hiv-id"><patient id="upn" field="identifier" identifierTypeId="05ee9cf4-7242-4a17-b4d4-00f707265c8a" /></span>
+						</script>
+					</ifMode>
+					<td>Unique Patient Number (UPN)</td>
+					<td>
+						<span id="hiv-id"><patient id="upn" field="identifier" identifierTypeId="05ee9cf4-7242-4a17-b4d4-00f707265c8a" /></span>
 							<input type="button" id="generate-hiv-id" value="Generate"/>
-						</td>
-					</tr>
-				</excludeIf>
+					</td>
+				</tr>
+
 			</table>
 			<table id="transit-patient" style="display: inline-block">
 				<tr>
@@ -267,17 +285,11 @@
 						<td>Transfer in date:</td>
 						<td><obs conceptId="160534AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
 					</tr>
-					<!--<tr>-->
-						<!--&lt;!&ndash; .pw greencard additions added counties &ndash;&gt;-->
-						<!--<td>Transferred from facility:</td>-->
-						<!--<td><obs conceptId="160535AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /> in County*:-->
-							<!--<select>-->
-								<!--<option value="Select">Select</option>-->
-								<!--<option value="Siaya">Siaya</option>-->
-								<!--<option value="Kisumu">Kisumu</option>-->
-								<!--<option value="Nairobi">Nairobi</option>-->
-							<!--</select> </td>-->
-					<!--</tr>-->
+					<tr>
+						<td>Transferred from facility:</td>
+						<td><obs conceptId="160535AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+
+					</tr>
 					<tr>
 						<td>Date <i>first</i> enrolled in HIV care:</td>
 						<td><obs conceptId="160555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
@@ -300,17 +312,26 @@
 				</tr>
 				<tr>
 					<td>Facility where confirmation done</td>
-					<td>
-						<obsgroup groupingConceptId="161559AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
-							<obs conceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-						</obsgroup>
-
-					</td>
+					<td><obs conceptId="162724AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></td>
 				</tr>
-				<!-- pw greencard additions who stage -->
 				<tr>
-					<td>WHO Stage*  </td>
-					<td>  <obs id="whostage" conceptId="5356AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+					<td>WHO Stage <strong><span id="patient-age-group"></span></strong> * </td>
+					<td>
+						<div id="whoAdult">
+							<table>
+								<tr>
+									<td><obs conceptId="5356AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1204AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1205AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1206AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1207AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="dropdown" answerLabels="WHO Stage1,WHO Stage2,WHO Stage3,WHO Stage4" /></td>
+								</tr>
+							</table>
+						</div>
+						<div id="whoChild">
+							<table>
+								<tr>
+									<td><obs conceptId="5356AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1220AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1221AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1222AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA," style="dropdown" answerLabels="WHO Stage1,WHO Stage2,WHO Stage3,WHO Stage4" /></td>
+								</tr>
+							</table>
+						</div>
+					</td>
 				</tr>
 				<!-- .pw greencard additions who stage -->
 				<tr>
