relaxed upn regex to accommodate for 10 digits for new enrollments and 11 digits for existing patients

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
@@ -170,7 +170,7 @@
                 var confirmedPveDate = getValue('confirmed-positive-date.value');
                 var upn = jq('#hiv-id input[type=text]').val();
 
-                if(/^[0-9]{10}$/.test(upn) === false) {
+                if((/^[0-9]{10}$/.test(upn) === false) || (/^[0-9]{11}$/.test(upn) === false)) {
                     alert("Invalid Unique Patient Number(UPN) Format! Should be mfl-clinic number, each 5 digits");
                     return false;
                 }
